# OpenRASE

./: .gitignore  .pylintrc  README.md  config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/server/: package.json  pyproject.toml  server.py
apps/server/src/: index.ts
apps/sfc_classifier/: package.json  pyproject.toml  sfc_classifier.py
apps/sfc_classifier/src/: index.ts
apps/sff/: package.json  pyproject.toml  sff.py
apps/sff-rx/: package.json
apps/sff-rx/src/: index.ts
apps/sff-tx/: package.json  pyproject.toml  tsconfig.json
apps/sff-tx/src/: index.ts
apps/sff/src/: index.ts
apps/vnf_proxy/: package.json  pyproject.toml  vnf_proxy.py
apps/vnf_proxy/src/: index.ts
containernet/: mininet-3.0-py3-none-any.whl
docker/compose/tester/: tester.yaml
docker/compose/tester/shared/: tester.yaml
docker/compose/tester/shared/k6/: script.js
docker/files/client/: Dockerfile
docker/files/dind/: Dockerfile
docker/files/dind/shared/: daemon.json
docker/files/dpi/: Dockerfile
docker/files/dpi/shared/: startup.sh
docker/files/dummy/: Dockerfile
docker/files/grafana/: Dockerfile
docker/files/ha/: Dockerfile
docker/files/ha/shared/conf/: default.vcl
docker/files/ids/: Dockerfile
docker/files/ids/shared/: startup.sh
docker/files/ids/shared/rules/: suricata.rules
docker/files/ips/: Dockerfile
docker/files/ips/shared/: startup.sh
docker/files/ips/shared/conf/: suricata.yaml
docker/files/k6/: Dockerfile  script.js.j2
docker/files/lb/: Dockerfile
docker/files/lb/shared/: Caddyfile
docker/files/node-server/: Dockerfile
docker/files/node-sfcc/: Dockerfile
docker/files/node-sff/: Dockerfile
docker/files/node-sff-rx/: Dockerfile
docker/files/node-sff-tx/: Dockerfile
docker/files/py-server/: Dockerfile
docker/files/py-sfcc/: Dockerfile
docker/files/py-sff/: Dockerfile
docker/files/server/: Dockerfile
docker/files/sfcc/: Dockerfile
docker/files/sff/: Dockerfile
docker/files/tm/: Dockerfile
docker/files/tm/shared/: startup.sh
docker/files/waf/: Dockerfile
docker/files/waf/shared/: Caddyfile
shared/constants/: sfc.py
shared/models/: forwarding_graph.py  sff.py
shared/utils/: config.py  container.py  encoder_decoder.py
src/: init.py
src/algorithms/: drl_sfcr_embedding.py  greedy_dijkstra_algorithm.py  simple_dijkstra_algorithm.py
src/algorithms/ga_dijkstra_algorithm/: ga.py  ga_utils.py  utils.py
src/algorithms/hybrid/: bega.py  ga_hybrid.py  gaha.py  genesis.py  hi_genesis.py  root_service.py
src/algorithms/hybrid/constants/: genesis_objective.py  root_evolver.py  surrogate.py
src/algorithms/hybrid/models/: individuals.py  root_evolver.py  traffic.py  weights.py
src/algorithms/hybrid/solvers/: chain_composition.py  link_embedding.py  vnf_embedding.py
src/algorithms/hybrid/surrogate/: combine_data.py  gaussian_process.py  linear_regression.py  nn_linear.py  nn_one_layer.py  nn_one_layer_32.py  nn_relu.py  nn_three_layers.py  random_forest.py  surrogate.py  svr.py
src/algorithms/hybrid/utils/: demand_predictions.py  extract_weights.py  genesis.py  hierarchical_evolution.py  hierarchical_evolution_client.py  hybrid_evaluation.py  hybrid_evolution.py  root_client.py  root_evolver.py  root_service.py  scorer.py  solvers.py
src/algorithms/mak_ga/: evolver.py  mak_ga_utils.py  utils.py
src/algorithms/mak_ga/models/: embedding.py
src/algorithms/models/: embedding.py
src/algorithms/surrogacy/: chain_composition.py  evolver.py  extract_weights.py  ga.py  generate.py  genesis.py  hybrid_online_offline.py  link_embedding.py  local_constants.py  nn.py  sample.py  scorer.py  surrogate.py  surrogate_evolver.py  surrogate_point.py  vnf_embedding.py
src/algorithms/surrogacy/data/: latency.csv  weights.csv
src/algorithms/surrogacy/solvers/: link_embedding.py  vnf_embedding.py
src/algorithms/surrogacy/surrogate/: fingerprint.pb  keras_metadata.pb  saved_model.pb  surrogate.py  surrogate_dt.py
src/algorithms/surrogacy/utils/: demand_predictions.py  extract_weights.py  hybrid_evolution.py  scorer.py  solvers.py
src/algorithms/utils/: graphs.py
src/calibrate/: benchmarking_models.py  calibrate.py  constants.py  demand_predictor.py  run_benchmark.py  traffic-design.json
src/constants/: container.py  docker.py  notification.py  ryu.py  topology.py
src/mano/: infra_manager.py  mano_class.py  notification_system.py  orchestrator.py  sdn_controller.py  telemetry.py  vnf_manager.py
src/models/: calibrate.py  telemetry.py  template_data.py  traffic_generator.py
src/runs/: calibrate.py  calibrate_vnfs.py  clean.py  debug.py  inference_latency_test.py  influxdb.py  init.py  root.py  simple-dijkstra-algorithm.py  test.py  visualise_traffic_pattern.py
src/runs/drl_sfcr/: run.py
src/runs/ga_dijkstra_algorithm/: run.py
src/runs/ga_dijkstra_algorithm/configs/: forwarding-graphs.json
src/runs/ga_dijkstra_algorithm/data/: requests.csv
src/runs/greedy_dijkstra_algorithm/: genesis_comp.py  run.py  sim_run.py
src/runs/greedy_dijkstra_algorithm/data/: .gitignore
src/runs/hybrid/: bega.py  gaha.py  gaha_hybrid.py  genesis.py  genesis_dynamic.py  genesis_mec.py  genesis_power.py  hi_genesis.py  hybrid.py  surrogate.py  toy.py
src/runs/hybrid/configs/: sfcrs_random.json
src/runs/hybrid/data/: .gitignore
src/runs/simple_dijkstra_algorithm/: run.py  sim_run.py
src/runs/simple_dijkstra_algorithm/configs/: traffic-design.json
src/runs/surrogacy/: benchmark.py  hybrid.py  run.py  surrogate.py  toy.py  train.py
src/runs/surrogacy/configs/: sfcrs.json  traffic-design-min.json  traffic-design.json
src/sfc/: evolver.py  fg_request_generator.py  sdn_controller.py  sfc_emulator.py  sfc_request_generator.py  solver.py  traffic_generator.py
src/tests/: test.py
src/utils/: container.py  data.py  docker.py  embedding_graph.py  forwarding_graph.py  host.py  liveness_checker.py  ryu.py  topology.py  traffic_design.py  tui.py
templates/: caddy.lb.j2  caddy.waf.j2  daemon.json.j2  default.vcl.j2  suricata.ips.yaml.j2  tester.yaml.j2
(+16 files in other folders)
