[tool.poetry]
name = "sfc-emulator"
version = "0.1.0"
description = "This is an emulator built on top of Containernet to benchmark and evaluate solutions to the NFV-RA problem."
authors = ["Theviyanthan K."]
license = "Apache-2.0 license"
packages = [
    { include = "models", from = "src" },
    { include = "utils", from = "src" },
    { include = "constants", from = "src" },
    { include = "mano", from = "src" },
    { include = "sfc", from = "src" },
    { include = "shared", from = "packages"}
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"
docker = "4.1.0" # A bug in 7.0.0 prevents building images with tags such as `localhost:5000/sfc-emulator:latest`
mininet = {file="containernet/mininet-3.0-py3-none-any.whl"}
requests = ">=2.14.2, !=2.18.0, <2.29.0"
influxdb-client = {extras = ["ciso"], version = "^1.40.0"}
dijkstar = "^2.6.0"
numpy = "^1.26.4"
tensorflow = "^2.16.1"
pandas = "^2.2.1"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
