[tool.poetry]
name = "OpenRASE"
version = "0.1.0"
description = "This is an emulator built on top of Containernet to benchmark and evaluate solutions to the NFV-RA problem."
authors = ["Theviyanthan K."]
license = "Apache-2.0 license"
packages = [
    { include = "models", from = "src" },
    { include = "utils", from = "src" },
    { include = "constants", from = "src" },
    { include = "mano", from = "src" },
    { include = "sfc", from = "src" },
    { include = "algorithms", from = "src" },
    { include = "calibrate", from = "src" },
    { include = "runs", from = "src" },
    { include = "shared", from = "packages/python"}
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"
docker = "4.1.0" # A bug in 7.0.0 prevents building images with tags such as `localhost:5000/sfc-emulator:latest`
mininet = {file="containernet/mininet-3.0-py3-none-any.whl"}
requests = ">=2.14.2, !=2.18.0, <2.29.0"
influxdb-client = {extras = ["ciso"], version = "^1.40.0"}
dijkstar = "^2.6.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
click = "^8.1.7"
setuptools = "<60" # To suppress 'distutils Version classes are deprecated. Use packaging.version instead.'
textual = "^0.57.1"
deap = "^1.4.1"
networkx = {version = "3.2.1", extras = ["default"]}
tensorflow = "2.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init = "runs.init:run"
calibrate = "runs.calibrate_vnfs:run"
dijkstra = "runs.simple_dijkstra_algorithm.run:run"
simdij = "runs.simple_dijkstra_algorithm.sim_run:run"
dijkstra_gen_traffic_design = "runs.simple_dijkstra_algorithm.run:getTrafficDesign"
test = "runs.test:run"
db = "runs.influxdb:run"
ga = "runs.ga_dijkstra_algorithm.run:run"
clean = "runs.clean:clean"
surrogacy = "runs.surrogacy.run:run"
surrogate_train = "runs.surrogacy.surrogate:trainModel"
surrogate_data_gen = "runs.surrogacy.surrogate:generateData"
debug = "runs.debug:run"
bm_cpu = "runs.surrogacy.benchmark:benchmarkCPU"
bm_mem = "runs.surrogacy.benchmark:benchmarkMemory"
bm_control = "runs.surrogacy.benchmark:benchmarkControl"
bm_link = "runs.surrogacy.benchmark:benchmarkLinks"
