[tool.poetry]
name = "sfc-classifier"
version = "0.1.0"
description = "A Service Function Chain (SFC) Classifier that classifies the incoming traffic into different SFCs using the source IP address of the traffic."
authors = ["Theviyanthan K."]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.0"
requests = "^2.31.0"
packages = {path = "../../packages"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
